--- a/src/app/debug/components/debug-components.component.html
+++ b/src/app/debug/components/debug-components.component.html
@@ -315,6 +315,40 @@
   </div>
   <mat-divider></mat-divider>
   <div>
+    <div class="debug-title">Badge</div>
+    <div>
+      <section>
+        <div matBadge="4" matBadgeOverlap="false" class="demo-section">
+          Text with a badge
+        </div>
+
+        <div matBadge="1" matBadgeSize="small" class="demo-section">
+          Text with small badge
+        </div>
+        <div matBadge="1" matBadgeSize="large" class="demo-section">
+          Text with large badge
+        </div>
+
+        <div class="demo-section">
+          Button with a badge on the left
+          <button mat-raised-button matBadge="8" matBadgePosition="before">
+            Action
+          </button>
+        </div>
+
+        <div class="demo-section">
+          Icon with a badge
+          <mat-icon matBadge="15">home</mat-icon>
+          <!-- Include text description of the icon's meaning for screen-readers -->
+          <span class="cdk-visually-hidden">
+            Example with a home icon with overlaid badge showing the number 15
+          </span>
+        </div>
+      </section>
+    </div>
+  </div>
+  <mat-divider></mat-divider>
+  <div>
     <div class="debug-title">Visuals</div>
     <div>
       <section>
