--- a/src/app/battle-zone/sign-up/sign-up.component.html
+++ b/src/app/battle-zone/sign-up/sign-up.component.html
@@ -31,7 +31,7 @@
           <tr>
             <th>Ruleset:</th>
             <td>{{ details.ruleset }}</td>
-            <th>Draft Period:</th>
+            <th>Season:</th>
             <td>
               {{ details.season[0] | date }} - {{ details.season[1] | date }}
             </td>
