--- a/src/styles/themes/christmas.theme.scss
+++ b/src/styles/themes/christmas.theme.scss
@@ -4,141 +4,179 @@
 @use "sass:map";
 @use "@angular/material" as mat;
 
-// Note: Color palettes are generated from primary: #bb2528, secondary: #165b33
-$_palettes: (
+// Note: Color palettes are generated from primary: #12d4ed, tertiary: #ed8012, neutral: #788082
+$palettes: (
   primary: (
     0: #000000,
-    10: #410003,
-    20: #680009,
-    25: #7d000d,
-    30: #930012,
-    35: #a5121b,
-    40: #b72125,
-    //surface-tint
-    50: #da3c3b,
-    60: #fd5651,
-    70: #ff8981,
-    80: #ffb3ad,
-    90: #ffdad6,
-    95: #ffedeb,
-    98: #fff8f7,
-    99: #fffbff,
+    10: #330000,
+    20: #660000,
+    25: #800000,
+    30: #990000,
+    35: #b30000,
+    40: #cc0000,
+    50: #ff0000,
+    60: #ff3333,
+    70: #ff6666,
+    80: #ff9999,
+    90: #ffcccc,
+    95: #ffe5e5,
+    98: #fff5f5,
+    99: #fffafa,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #00210d,
-    20: #00391b,
-    25: #004522,
-    30: #07522b,
-    35: #1a5e36,
-    40: #286b41,
-    50: #438458,
-    60: #5d9f70,
-    70: #77ba89,
-    80: #92d6a3,
-    90: #adf2bd,
-    95: #c3ffcf,
-    98: #eaffea,
-    99: #f5fff3,
-    100: #ffffff,
-  ),
-  tertiary: (
-    0: #000000,
-    10: #2c1700,
-    20: #492900,
-    25: #583300,
-    30: #683d00,
-    35: #784700,
-    40: #895100,
-    50: #a7691a,
-    60: #c58233,
-    70: #e49c4a,
-    80: #ffb86b,
-    90: #ffdcbc,
-    95: #ffeee0,
-    98: #fff8f4,
-    99: #fffbff,
+    10: #2e0505,
+    20: #5c0a0a,
+    25: #730d0d,
+    30: #8a0f0f,
+    35: #a11212,
+    40: #b81414,
+    50: #e61919,
+    60: #eb4747,
+    70: #f07575,
+    80: #f5a3a3,
+    90: #fad1d1,
+    95: #fce8e8,
+    98: #fef6f6,
+    99: #fefafa,
     100: #ffffff,
   ),
   neutral: (
     0: #000000,
-    10: #271816,
-    20: #3d2c2b,
-    25: #493735,
-    30: #554240,
-    35: #624e4c,
-    40: #6e5a58,
-    50: #887270,
-    60: #a38b89,
-    70: #bfa5a3,
-    80: #dbc0be,
-    90: #f8dcd9,
-    95: #ffedeb,
-    98: #fff7ff,
-    //surface surface-bright
-    99: #fffbff,
+    10: #151d1f,
+    20: #2a3234,
+    25: #353d3f,
+    30: #40484a,
+    35: #4c5456,
+    40: #586062,
+    50: #70787a,
+    60: #8a9294,
+    70: #a5adaf,
+    80: #c0c8ca,
+    90: #dce4e6,
+    95: #eaf2f4,
+    98: #f3fbfd,
+    99: #f7fdff,
     100: #ffffff,
-    4: #180b0a,
-    6: #1e100f,
-    12: #2b1c1a,
-    17: #362624,
-    22: #42312f,
-    24: #473533,
-    87: #efd4d1,
-    //surface-dim
-    92: #fee2df,
-    //surface-container-high
-    94: #ffe9e7,
-    //surface-container
-    96: #fff0ef,
-    //surface-container-low
+    4: #080f11,
+    6: #0d1516,
+    12: #192123,
+    17: #242b2d,
+    22: #2e3638,
+    24: #333a3c,
+    87: #d3dbdd,
+    92: #e2eaec,
+    94: #e7eff1,
+    96: #edf5f7,
   ),
   neutral-variant: (
     0: #000000,
-    10: #2a1614,
-    20: #422a28,
-    25: #4e3533,
-    30: #5a403e,
-    35: #674c49,
-    40: #745755,
-    50: #8e706d,
-    60: #aa8986,
-    70: #c6a3a0,
-    80: #e3beba,
-    90: #ffdad6,
-    //surface-varient
-    95: #ffedeb,
-    98: #fff8f7,
-    99: #fffbff,
+    10: #290a0a,
+    20: #521414,
+    25: #661a1a,
+    30: #7a1f1f,
+    35: #8f2424,
+    40: #a32929,
+    50: #cc3333,
+    60: #d65c5c,
+    70: #e08585,
+    80: #ebadad,
+    90: #f5d6d6,
+    95: #faebeb,
+    98: #fdf7f7,
+    99: #fefbfb,
     100: #ffffff,
   ),
   error: (
     0: #000000,
-    10: #410002,
-    20: #690005,
-    25: #7e0007,
-    30: #93000a,
-    35: #a80710,
-    40: #ba1a1a,
-    50: #de3730,
-    60: #ff5449,
-    70: #ff897d,
-    80: #ffb4ab,
-    90: #ffdad6,
-    95: #ffedea,
-    98: #fff8f7,
-    99: #fffbff,
+    10: #333300,
+    20: #666600,
+    25: #808000,
+    30: #999900,
+    35: #b3b300,
+    40: #cccc00,
+    50: #ffff00,
+    60: #ffff33,
+    70: #ffff66,
+    80: #ffff99,
+    90: #ffffcc,
+    95: #ffffe5,
+    98: #fffff5,
+    99: #fffffa,
+    100: #ffffff,
+  ),
+  primary-alt: (
+    0: #000000,
+    10: #062d13,
+    20: #0d5926,
+    25: #107030,
+    30: #13863a,
+    35: #169c43,
+    40: #19b34d,
+    50: #20df60,
+    60: #4ce680,
+    70: #79eca0,
+    80: #a6f2bf,
+    90: #d2f9df,
+    95: #e9fcef,
+    98: #f6fef9,
+    99: #fbfefc,
+    100: #ffffff,
+  ),
+  secondary-alt: (
+    0: #000000,
+    10: #0d2615,
+    20: #1a4d2b,
+    25: #206035,
+    30: #267340,
+    35: #2d864b,
+    40: #339955,
+    50: #40bf6a,
+    60: #66cc88,
+    70: #8cd9a6,
+    80: #b3e6c4,
+    90: #d9f2e1,
+    95: #ecf9f0,
+    98: #f7fcf9,
+    99: #fbfefc,
+    100: #ffffff,
+  ),
+  neutral-variant-alt: (
+    0: #000000,
+    10: #132017,
+    20: #26402f,
+    25: #30503a,
+    30: #396046,
+    35: #437052,
+    40: #4d805e,
+    50: #609f75,
+    60: #80b391,
+    70: #9fc6ac,
+    80: #bfd9c8,
+    90: #dfece3,
+    95: #eff5f1,
+    98: #f9fbf9,
+    99: #fcfdfc,
     100: #ffffff,
   ),
 );
 
 $_rest: (
-  secondary: map.get($_palettes, secondary),
-  neutral: map.get($_palettes, neutral),
-  neutral-variant: map.get($_palettes, neutral-variant),
-  error: map.get($_palettes, error),
+  secondary: map.get($palettes, secondary),
+  neutral: map.get($palettes, neutral),
+  neutral-variant: map.get($palettes, neutral-variant),
+  error: map.get($palettes, error),
 );
 
-$primary-palette: map.merge(map.get($_palettes, primary), $_rest);
-$tertiary-palette: map.merge(map.get($_palettes, tertiary), $_rest);
+$_rest-alt: (
+  secondary: map.get($palettes, secondary-alt),
+  neutral: map.get($palettes, neutral),
+  neutral-variant: map.get($palettes, neutral-variant-alt),
+  error: map.get($palettes, error),
+);
+
+$primary-palette-alt: map.merge(map.get($palettes, primary-alt), $_rest-alt);
+$tertiary-palette-alt: map.merge(map.get($palettes, primary), $_rest-alt);
+$primary-palette: map.merge(map.get($palettes, primary), $_rest);
+$tertiary-palette: map.merge(map.get($palettes, primary-alt), $_rest);
