--- a/src/styles/themes/classic.theme.scss
+++ b/src/styles/themes/classic.theme.scss
@@ -4,42 +4,42 @@
 @use "sass:map";
 @use "@angular/material" as mat;
 
-// Note: Color palettes are generated from primary: #12d4ed, tertiary: #ed8012, neutral: #788082
+// Note: Color palettes are generated from primary: 0x008393, tertiary: #ed8012, neutral: #788082
 $palettes: (
   primary: (
     0: #000000,
-    10: #001f24,
-    20: #00363e,
-    25: #00424b,
-    30: #004e59,
-    35: #005b67,
-    40: #006875,
-    50: #008393,
-    60: #009fb3,
-    70: #00bcd3,
-    80: #24d9f3,
-    90: #9eefff,
-    95: #d2f7ff,
-    98: #eefcff,
-    99: #f7fdff,
+    10: #06282d,
+    20: #0d5159,
+    25: #106570,
+    30: #137986,
+    35: #168e9c,
+    40: #19a2b3,
+    50: #20cadf,
+    60: #4cd5e6,
+    70: #79dfec,
+    80: #a6eaf2,
+    90: #d2f4f9,
+    95: #e9fafc,
+    98: #f6fdfe,
+    99: #fbfefe,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #001f24,
-    20: #00363e,
-    25: #02424b,
-    30: #154e57,
-    35: #245963,
-    40: #32666f,
-    50: #4c7f88,
-    60: #6699a3,
-    70: #81b3be,
-    80: #9ccfd9,
-    90: #b7ebf6,
-    95: #d2f7ff,
-    98: #eefcff,
-    99: #f7fdff,
+    10: #0d2326,
+    20: #1a474d,
+    25: #205960,
+    30: #266a73,
+    35: #2d7c86,
+    40: #338e99,
+    50: #40b1bf,
+    60: #66c1cc,
+    70: #8cd0d9,
+    80: #b3e0e6,
+    90: #d9eff2,
+    95: #ecf7f9,
+    98: #f7fcfc,
+    99: #fbfdfe,
     100: #ffffff,
   ),
   neutral: (
@@ -72,20 +72,20 @@ $palettes: (
   ),
   neutral-variant: (
     0: #000000,
-    10: #101e20,
-    20: #253335,
-    25: #303e40,
-    30: #3c494c,
-    35: #475558,
-    40: #536164,
-    50: #6b797d,
-    60: #859396,
-    70: #9faeb1,
-    80: #bbc9cc,
-    90: #d6e5e8,
-    95: #e5f3f7,
-    98: #eefcff,
-    99: #f7fdff,
+    10: #0d2326,
+    20: #19474d,
+    25: #205860,
+    30: #266a73,
+    35: #2d7b86,
+    40: #338d99,
+    50: #40b0bf,
+    60: #66c0cc,
+    70: #8cd0d9,
+    80: #b3e0e6,
+    90: #d9eff2,
+    95: #ecf7f9,
+    98: #f7fcfc,
+    99: #fbfdfe,
     100: #ffffff,
   ),
   error: (
@@ -108,56 +108,56 @@ $palettes: (
   ),
   primary-alt: (
     0: #000000,
-    10: #2f1400,
-    20: #4e2500,
-    25: #5f2f00,
-    30: #703800,
-    35: #814200,
-    40: #934b00,
-    50: #b76000,
-    60: #dd7500,
-    70: #ff8e25,
-    80: #ffb781,
-    90: #ffdcc4,
-    95: #ffede3,
-    98: #fff8f5,
-    99: #fffbff,
+    10: #331a00,
+    20: #663300,
+    25: #804000,
+    30: #994d00,
+    35: #b35a00,
+    40: #cc6600,
+    50: #ff8000,
+    60: #ff9933,
+    70: #ffb366,
+    80: #ffcc99,
+    90: #ffe6cc,
+    95: #fff2e5,
+    98: #fffaf5,
+    99: #fffcfa,
     100: #ffffff,
   ),
   secondary-alt: (
     0: #000000,
-    10: #2f1400,
-    20: #4d2602,
-    25: #5b310b,
-    30: #693c16,
-    35: #764720,
-    40: #84532b,
-    50: #a16b41,
-    60: #be8458,
-    70: #dc9e6f,
-    80: #fab988,
-    90: #ffdcc4,
-    95: #ffede3,
-    98: #fff8f5,
-    99: #fffbff,
+    10: #2e1a05,
+    20: #5c330a,
+    25: #73400d,
+    30: #8a4d0f,
+    35: #a15a12,
+    40: #b86614,
+    50: #e68019,
+    60: #eb9947,
+    70: #f0b375,
+    80: #f5cca3,
+    90: #fae6d1,
+    95: #fcf2e8,
+    98: #fefaf6,
+    99: #fefcfa,
     100: #ffffff,
   ),
   neutral-variant-alt: (
     0: #000000,
-    10: #27180d,
-    20: #3e2d21,
-    25: #4a382b,
-    30: #564336,
-    35: #624e41,
-    40: #6f5a4c,
-    50: #897363,
-    60: #a48c7c,
-    70: #c0a695,
-    80: #ddc1b0,
-    90: #faddcb,
-    95: #ffede3,
-    98: #fff8f5,
-    99: #fffbff,
+    10: #291a0a,
+    20: #523314,
+    25: #66401a,
+    30: #7a4d1f,
+    35: #8f5924,
+    40: #a36629,
+    50: #cc8033,
+    60: #d6995c,
+    70: #e0b385,
+    80: #ebccad,
+    90: #f5e6d6,
+    95: #faf2eb,
+    98: #fdfaf7,
+    99: #fefcfb,
     100: #ffffff,
   ),
 );
