--- a/src/styles/themes/shiny.theme.scss
+++ b/src/styles/themes/shiny.theme.scss
@@ -8,38 +8,38 @@
 $palettes: (
   primary: (
     0: #000000,
-    10: #002201,
-    20: #003a03,
-    25: #004604,
-    30: #005306,
-    35: #006108,
-    40: #006e0b,
-    50: #008b11,
-    60: #00a817,
-    70: #29c52c,
-    80: #4ee248,
-    90: #75ff68,
-    95: #caffbb,
-    98: #ecffe2,
-    99: #f7ffef,
+    10: #062d0b,
+    20: #0d5916,
+    25: #10701c,
+    30: #138621,
+    35: #169c27,
+    40: #19b32c,
+    50: #20df37,
+    60: #4ce65f,
+    70: #79ec87,
+    80: #a6f2af,
+    90: #d2f9d7,
+    95: #e9fceb,
+    98: #f6fef7,
+    99: #fbfefb,
     100: #ffffff,
   ),
   secondary: (
     0: #000000,
-    10: #002201,
-    20: #003a03,
-    25: #004604,
-    30: #025307,
-    35: #166014,
-    40: #246c20,
-    50: #3f8637,
-    60: #59a14e,
-    70: #73bd66,
-    80: #8dd97e,
-    90: #a8f698,
-    95: #caffbb,
-    98: #ecffe2,
-    99: #f7ffef,
+    10: #0d2610,
+    20: #1a4d20,
+    25: #206028,
+    30: #267330,
+    35: #2d8638,
+    40: #33993f,
+    50: #40bf4f,
+    60: #66cc72,
+    70: #8cd996,
+    80: #b3e6b9,
+    90: #d9f2dc,
+    95: #ecf9ed,
+    98: #f7fcf8,
+    99: #fbfefb,
     100: #ffffff,
   ),
   neutral: (
@@ -72,20 +72,20 @@ $palettes: (
   ),
   neutral-variant: (
     0: #000000,
-    10: #131f10,
-    20: #273423,
-    25: #323f2e,
-    30: #3d4a39,
-    35: #495644,
-    40: #55624f,
-    50: #6d7b67,
-    60: #869580,
-    70: #a1b099,
-    80: #bccbb4,
-    90: #d8e7cf,
-    95: #e6f5dd,
-    98: #effee5,
-    99: #f7ffef,
+    10: #132015,
+    20: #264029,
+    25: #305034,
+    30: #39603e,
+    35: #437048,
+    40: #4d8053,
+    50: #609f67,
+    60: #80b386,
+    70: #9fc6a4,
+    80: #bfd9c2,
+    90: #dfece1,
+    95: #eff5f0,
+    98: #f9fbf9,
+    99: #fcfdfc,
     100: #ffffff,
   ),
   error: (
@@ -108,56 +108,56 @@ $palettes: (
   ),
   primary-alt: (
     0: #000000,
-    10: #1d1d00,
-    20: #323200,
-    25: #3e3e00,
-    30: #494900,
-    35: #555500,
-    40: #626200,
-    50: #7b7b00,
-    60: #969600,
-    70: #b1b111,
-    80: #cdcd34,
-    90: #e9e94f,
-    95: #f8f85c,
-    98: #fffeab,
-    99: #fffbff,
+    10: #333300,
+    20: #666600,
+    25: #808000,
+    30: #999900,
+    35: #b3b300,
+    40: #cccc00,
+    50: #ffff00,
+    60: #ffff33,
+    70: #ffff66,
+    80: #ffff99,
+    90: #ffffcc,
+    95: #ffffe5,
+    98: #fffff5,
+    99: #fffffa,
     100: #ffffff,
   ),
   secondary-alt: (
     0: #000000,
-    10: #1d1d00,
-    20: #323200,
-    25: #3e3e07,
-    30: #494912,
-    35: #55551d,
-    40: #616128,
-    50: #7a7a3e,
-    60: #949455,
-    70: #afaf6d,
-    80: #cbca86,
-    90: #e7e6a0,
-    95: #f6f5ad,
-    98: #fffdb4,
-    99: #fffbff,
+    10: #2d2d06,
+    20: #59590d,
+    25: #707010,
+    30: #868613,
+    35: #9c9c16,
+    40: #b3b319,
+    50: #dfdf20,
+    60: #e6e64c,
+    70: #ecec79,
+    80: #f2f2a6,
+    90: #f9f9d2,
+    95: #fcfce9,
+    98: #fefef6,
+    99: #fefefb,
     100: #ffffff,
   ),
   neutral-variant-alt: (
     0: #000000,
-    10: #1c1c0c,
-    20: #323120,
-    25: #3d3c2a,
-    30: #484835,
-    35: #545340,
-    40: #605f4b,
-    50: #797863,
-    60: #93927b,
-    70: #aeac94,
-    80: #cac7af,
-    90: #e6e3ca,
-    95: #f5f2d7,
-    98: #fdfae0,
-    99: #fffbff,
+    10: #26260d,
+    20: #4d4d1a,
+    25: #606020,
+    30: #737326,
+    35: #86862d,
+    40: #999933,
+    50: #bfbf40,
+    60: #cccc66,
+    70: #d9d98c,
+    80: #e6e6b3,
+    90: #f2f2d9,
+    95: #f9f9ec,
+    98: #fcfcf7,
+    99: #fefefb,
     100: #ffffff,
   ),
 );
